--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
@@ -186,7 +186,7 @@ $border:solid 3px black;
   grid-template-rows: repeat(4, 25em);
 
 
-  .itemSilkDress {
+  .items {
     color: black;   
     position: relative;
     display: inline-block;
