--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
@@ -1,44 +1,130 @@
+body{
+  width: 100%;
+  
+}
 .header {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr;
+width: 100%;
+display: flex;
+flex-direction: column;
+  // display: grid;
+  // grid-template-columns: repeat(3, 1fr);
+  // grid-template-rows: 1fr;
   align-items: center;
   height: 9vh;
-  border: 1px solid black;
+.usp__bar{
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  align-items: center;
+  min-height: 40px;
+  max-height: 40px;;
+  justify-content: space-around;
+  background-color: black;
+  margin-bottom: 10px;
+  p{
+   transition:  ease 1s;
 
-  &__logo {
-    img {
-      height: 25%;
-      width: 25%;
+    color: white;
+    font-size: 10px;
+    line-height: 10px;
+    &:hover{
+    transform: scale(1.5);
+
     }
   }
-
-  &__nav {
-    font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
+}
+&__inner{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  &__side--menu{
+    margin-top: 10px;
     display: flex;
-    // position: relative;
-    bottom: 30px;
-    gap: 10px;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 135px;
+    height: 100%;
+    margin-right: 35px;
 
-    a {
-      text-decoration: none;
-      color: rgb(0, 0, 0);
+    i{
+   transition:  ease 1s;
+      
+      &:hover{
+        text-shadow: 0 0 15px rgb(56, 56, 56);
+      }
     }
+    
   }
-
-  &__searchBar {
-    input {
-      padding: 6px 10px;
-      margin-top: 8px;
-      margin-right: 16px;
-      background: #ddd;
-      font-size: 17px;
+  &--searchBar{
+    padding: 2px;
+    display: flex;
+    align-items: center;
+    margin-right: -385px;
+   height: 30px;
+   transition: border ease 1s;
+    border: solid thin #e9ecef;
+    background-color:#e9ecef;
+    &:hover{
+      border: 1px solid black;
+    }
+    input{
+    background-color: #e9ecef;
       border: none;
-      cursor: pointer;
     }
   }
+&--logo {
+//   float: left;
+//  height: 70px;
+  img{
+ height: 25%;
+ width: 25%;
+  }
+}
+
+&--nav {
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  bottom: 30px;
+  gap: 10px;
+  justify-content: center;
+  .dropdown-men{
+    display: none;
+    position: absolute;
+    background-color: #f70808;
+    min-width: 100%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+  .nav__item--man{
+    &:hover .dropdown-men {
+      display: block;
+     
+
+    }
+  }
+  a {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    &:hover{
+      border-bottom: 2px  solid black;
+    }
+  }
+ 
+}
+}
+ 
+
+  // &__searchBar {
+  //   input {
+  //     padding: 6px 10px;
+  //     margin-top: 8px;
+  //     margin-right: 16px;
+  //     background: #ddd;
+  //     font-size: 17px;
+  //     border: none;
+  //     cursor: pointer;
+  //   }
+  // }
 }
 
 .breadCrumbs {
@@ -63,9 +149,10 @@
 }
 
 .cards {
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  // display: grid;
+  // grid-template-rows: repeat(3, 1fr);
+  // grid-template-columns: repeat(4, 1fr);
   border: 1px solid black;
   &__item {
     width: 330px;
