--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
@@ -241,8 +241,11 @@ body {
     .cart {
         background-color: rgb(210, 210, 211);
         border-radius: 10px;
+        position: relative;
+        left: 7%;
+          margin-bottom: 5%;
     }
-
+    
     gap: 5px;
     width: 280px;
     display: grid;
