--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
@@ -26,7 +26,7 @@ body {
     z-index: 20;
     top: 0px;
     left: 0px;
-    height: 45px;
+    height: 90px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -42,7 +42,6 @@ body {
         display: flex;
         justify-content: space-around;
         align-items: center;
-
         // width: 200px;
         &__item {
             width: fit-content;
@@ -53,13 +52,34 @@ body {
                 color: var(--main-color-purple1)
             }
         }
+        .pulse{
+            animation: pulse 1000ms ease;
+        }
+    }
+    &__cart-notification{
+        // border: 1px solid var(--main-color-purple1);
+        background-color: var(--main-color-gray2);
+        border-radius: 5px;
+        text-align: center;
+        width: 20px;
+        height: 20px;
+        position: fixed;
+        top: 15px;
+        right: 4px;
     }
 }
+
+@keyframes pulse {
+       0% {}
+       70% {box-shadow: 0px 0px 20px 10px var(--main-color-purple1), inset 0px 0px 20px 10px var(--main-color-purple1);}
+       100% {box-shadow:0px;} 
+}
+
 .currency-selector{
     // border: 1px solid red;
     z-index: 10;
     position: sticky;
-    top: 45px;
+    top: 90px;
     left: 240px;
     padding: 5px;
     width: 300px;
@@ -107,7 +127,7 @@ body {
     justify-content: center;
     align-items: center;
     margin-block: 10px;
-    padding-top: 50px;
+    padding-top: 80px;
 
     &__item {
         margin-inline: 15px;
