--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -64,6 +64,7 @@
 
 body {
     font-family: 'Barlow Condensed', sans-serif;
+    overflow-x: hidden;
 }
 
 // ---------- HOME -------  //
@@ -112,9 +113,10 @@ body {
     z-index: 2;
     font-size: 18px;
 
-    .mlogo{
+    .mlogo {
         display: none;
-        img{
+
+        img {
             height: 80px;
         }
     }
@@ -131,6 +133,7 @@ body {
         li {
             padding: 5px;
             font-weight: bold;
+
             &:hover {
                 cursor: pointer;
                 box-shadow: 0 0 0 1px rgb(0, 0, 0);
@@ -168,15 +171,19 @@ body {
         }
     }
 
-    .burger{
-        
-        display: none;
+    .burger {
 
-        div{
+        display: none;
+        
+        div {
             width: 30px;
             height: 5px;
-            background-color: #202020 ;
+            background-color: #202020;
             margin: 5px;
+        }
+
+        &:hover{
+            cursor: pointer;
         }
     }
 
@@ -519,7 +526,7 @@ body {
 
         &__grid {
             display: grid;
-            grid-template-columns:1fr 1fr;
+            grid-template-columns: 1fr 1fr;
             gap: 50px;
             color: #ffff;
 
@@ -532,35 +539,38 @@ body {
                     display: flex;
                     justify-content: space-between;
                     margin-bottom: 10px;
-                    &__price{
+
+                    &__price {
                         color: #ed3524;
-                        &::before{
-                            content:'₪';
+
+                        &::before {
+                            content: '₪';
                             font-size: .75rem;
                             margin-right: 5px;
                         }
 
                     }
 
-                    
+
                 }
-                &__desc{
+
+                &__desc {
                     font-size: 70%;
                     text-align: left;
                     margin-bottom: 20px;
                     width: 50ch;
-                    
+
                 }
             }
         }
     }
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
 
-   
 
-    .navbar{
+
+    .navbar {
 
         top: 0px;
         height: 90px;
@@ -568,11 +578,29 @@ body {
         padding: 1em;
         justify-content: flex-start;
 
-        .burger{
+        .burger {
+
             display: block;
+
+            div {
+                width: 40px;
+                transform-origin: center;
+            }
+
+            // .line1{
+            //     transform: rotate(45deg);
+            // }
+            // .line3{
+            //     transform: rotate(-45deg);
+            // }
+
+            // .line2 {
+            //     display: none;
+            // }
+
         }
 
-        .navtags{
+        .navtags {
 
             background-color: #EBEBEB;
             position: absolute;
@@ -581,21 +609,29 @@ body {
             left: 0px;
             width: 25%;
             height: 500px;
+            transform: translateX(-100%);
 
+            .navtags-active{
+                transform: translateX(0%);
+            }
+
+            li{
+                opacity: 0;
+            }
         }
 
-        .fulogo{
+        .fulogo {
             display: none;
         }
 
-        .mlogo{
+        .mlogo {
             display: block;
             position: absolute;
             left: 50%;
         }
-    
+
     }
 
-   
-    
+
+
 }
