--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
@@ -292,7 +292,7 @@ body {
     border: 2px solid black;
     border-radius: 20px;
     box-shadow: black 20px 20px 20px;
-
+    background: var(--main-color-gray3);
 
     &__title {
         text-align: center;
@@ -304,6 +304,20 @@ body {
         border-radius: 40px;
     }
 
+    position: fixed;
+    top: 80px;
+    right: 0px;
+    pointer-events: none;
+
+    opacity: 0;
+    transform: translateY(-30px);
+    transition: ease 500ms;
+
+    &.visible{
+        opacity: 1;
+        transform: translateY(0px);
+        pointer-events: all;
+    }
 }
 
 ////OWNER
