--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.scss
@@ -1,25 +1,132 @@
+:root{
+  --genergal-text-color: #e5dfd9;
+  --footer-color:rgb(147, 147, 147);
+  font-size: 1rem;
+}
+// makes everything have 0 margin for style start:
+html,
 body {
-    margin:0;
+  margin: 0;
+  scroll-behavior: smooth;
 }
-*, *::before, *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
-.wrapper{
-    display: grid;
+.wrapper {
+  display: grid;
 }
-.navBar{
-&__menu{
-    margin: .5rem .5rem ;
-&-icon{
-    width: 1.5rem;
-    height: 1.5rem;
-}
-&-selection{
-    display: flex;
-}
-}
+.navBar {
+  &__menu {
+    margin: 0.5rem 0.5rem;
+    &-icon {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+    &-selection {
+      display: flex;
+    }
+  }
 }
 
-[data-add-to-bag]{
-    //for js and animation
+[data-add-to-bag] {
+  //for js and animation
+}
+
+.backToTop {
+  text-align: center;
+  background: black;
+  color: var(--genergal-text-color);
+  border: none;
+  padding: 0.5rem 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  &::before {
+    width: 0.5rem;
+    display: inline-block;
+    transform: rotate(90deg);
+    content: url("data:image/svg+xml,%3Csvg id='ot-back-arw' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 444.531 444.531' xml:space='preserve'%3E%3Ctitle%3EBack Button%3C/title%3E%3Cg%3E%3Cpath fill='%23999' d='M213.13,222.409L351.88,83.653c7.05-7.043,10.567-15.657,10.567-25.841c0-10.183-3.518-18.793-10.567-25.835&%2310; l-21.409-21.416C323.432,3.521,314.817,0,304.637,0s-18.791,3.521-25.841,10.561L92.649,196.425&%2310; c-7.044,7.043-10.566,15.656-10.566,25.841s3.521,18.791,10.566,25.837l186.146,185.864c7.05,7.043,15.66,10.564,25.841,10.564&%2310; s18.795-3.521,25.834-10.564l21.409-21.412c7.05-7.039,10.567-15.604,10.567-25.697c0-10.085-3.518-18.746-10.567-25.978&%2310; L213.13,222.409z'/%3E%3C/g%3E%3C/svg%3E");
+  }
+}
+footer {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: .8em;
+  width: 100%;
+  display: grid;
+  // grid-template-areas:
+  //   "locator"
+  //   "wI"
+  //   ""
+  //   ""
+  //   ""
+  //   ""
+  //   "";
+  grid-template-columns: 1fr;
+  grid-template-rows: 4fr 4fr 5rem 5rem;
+  gap: 1rem;
+  background-color: rgb(0, 0, 0);
+  
+  svg {
+    padding: 0 .2rem;
+    width: 1rem;
+    height: auto;
+  }
+  [class^="secondaryNav"] {
+    padding: .5rem;
+    border-bottom: 0.1em solid rgba(238, 238, 238, 0.119);
+    :last-child{
+      border:none;
+    }
+  }
+  .secondaryNav {
+    &__withIcons {
+      color: rgb(127, 125, 121);
+      background-color: rgb(27, 27, 27);
+    }
+    &__locator {
+      color: var(--footer-color);
+      &::before {
+        padding: .2rem;
+        width: 1rem;
+        display: inline-block;
+        // content:url(./SVG/location.svg);
+        content:url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 20"%3E%3Csymbol viewBox="0 0 14 20" id="svg-icon-location"%3E%3Ctitle%3Elocation%3C/title%3E%3Cg fill="%23currentColor"%3E%3Cpath d="M7,10.8c-1.7,0-3-1.4-3-3.2c0-1.8,1.3-3.2,3-3.2c1.7,0,3,1.4,3,3.2C10,9.4,8.7,10.8,7,10.8 M14,7.6&%2310;&%239;&%239;&%239;C14,3.4,10.9,0,7,0S0,3.4,0,7.6c0,2.1,0.8,4,2.1,5.4l0,0l5,7l5-7l0,0C13.2,11.6,14,9.7,14,7.6"/%3E%3C/g%3E%3C/symbol%3E%3Cuse xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="%23svg-icon-location"/%3E%3C/svg%3E');
+        @media only screen and (min-width: 768px) {
+          display: none;
+        }
+      }
+    }
+    &__services {
+      fill: var(--footer-color);
+
+    }
+    &__ostria {
+      fill: var(--footer-color);
+
+    }
+    &__appointment {
+      fill: var(--footer-color);
+    }
+    &__withoutIcons {
+      color: rgb(127, 125, 121);
+      background-color: rgb(27, 27, 27);
+    }
+  }
+  .footer__svgs{
+    display: flex;
+    justify-content: space-around;
+    &-equilibrium{
+      width: 3rem;
+      background-repeat: no-repeat;
+      background-image: url(../SVG/equilibrium.svg);
+    }
+    &-app{
+      width: 3rem;
+      background-repeat: no-repeat;
+      background-image: url(../SVG/app.svg);
+
+    }
+  }
 }
