--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .main {
@@ -203,185 +204,200 @@
 .container {
     max-width: 740px;
     height: 900px;
-    border: 3px solid red;
+    // border: 3px solid red;
     margin: auto;
-    background-image:
-        linear-gradient(90deg, rgb(220, 245, 252), rgba(160, 167, 166, 0)),
-        repeating-linear-gradient(-45deg, #d1fffd, #f3f591 1.5px, #b4c9f1 2px, #fac294 4px);
+    background: linear-gradient(rgb(157, 241, 157),
+            transparent),
+        linear-gradient(90deg,
+            skyblue,
+            transparent),
+        linear-gradient(-90deg,
+            coral,
+            transparent);
+    background-blend-mode: screen;
+}
+
+// background-color: rgb(46, 127, 141);
+
+&_header {
     // background-color: rgb(46, 127, 141);
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    flex-direction: row;
+    margin-top: 10px;
+    height: 12vh;
+    // border: 3px solid blue;
 
-    &_header {
-        // background-color: rgb(46, 127, 141);
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: repeat(5, 1fr);
-        flex-direction: row;
-        margin-top: 10px;
-        height: 12vh;
-        // border: 3px solid blue;
-
-        &-logo {
-            // border: 2px solid red;
-            background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRT2g09MmhCe-sbllbrt4IiSLhWaDxbGMrEegdPhPyT5uIkLMxjR-qAi_-AIvz61Ust4s&usqp=CAU);
-            background-position: center;
-            background-size: contain;
-            background-repeat: no-repeat;
-            grid-row: 1/4;
-            grid-column: 1/2;
-            height: 10vh;
-        }
-
-        &-search {
-            height: 10vh;
-            grid-row: 1/4;
-            grid-column: 2/8;
-            justify-content: center;
-
-            & input {
-                width: 100%;
-                height: 90%;
-                align-self: center;
-                background-color: blanchedalmond;
-                border-radius: 10px;
-
-            }
-        }
-
-        &_menu {
-            grid-column: 8/13;
-            height: 10vh;
-            grid-row: 1/4;
-            display: flex;
-            column-gap: 1rem;
-
-            &-btn {
-                background-color: transparent;
-                box-shadow: none;
-                display: inline-block;
-                width: 25%;
-                border: none;
-
-                & p {
-                    font-size: 12px;
-                }
-            }
-        }
-    }
-
-    &-imgsBox {
-        background-image: url(https://s18670.pcdn.co/wp-content/uploads/Top-20-Teacher-T-Shirts-on-Etsy.png);
+    &-logo {
+        // border: 2px solid red;
+        background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRT2g09MmhCe-sbllbrt4IiSLhWaDxbGMrEegdPhPyT5uIkLMxjR-qAi_-AIvz61Ust4s&usqp=CAU);
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
-        margin: auto;
-        width: 100%;
-        height: 35%;
-        margin-top: 10px;
+        grid-row: 1/4;
+        grid-column: 1/2;
+        height: 10vh;
+        margin-top: -1vh;
     }
 
-    &_catagories {
-        display: flex;
-        justify-content: space-around;
-        width: 100%;
-        flex-direction: row;
-        height: 20%;
-        margin: auto;
+    &-search {
+        height: 10vh;
+        grid-row: 1/4;
+        grid-column: 2/8;
+        justify-content: center;
+        margin-top: 1vh;
 
-        &-box {
-            margin-top: 10px;
-            width: 35%;
-            // border: 1px solid black;
-            background-position: center;
-            background-size: contain;
-            background-repeat: no-repeat;
-            &:hover{transform : scale(1.2);
-            }
-        }
-        &-display {
+        & input {
             width: 100%;
-            height: 25%;
-            margin-top: 5px;
-            border: 1px solid rgb(197, 187, 187);
-            display: flex;
-            flex-direction: column;
-            column-gap: 5px;
-            overflow-y: auto; 
-            white-space: nowrap;
+            height: 50%;
+            align-self: center;
+            background-color: blanchedalmond;
+            border-radius: 10px;
 
-            &-card{
-                border-bottom: 5px solid rgb(0, 0, 0);
-                box-sizing: content-box;
-                box-shadow: rgba(110, 111, 112, 0.55) 0px 30px 60px 80px inset, rgba(12, 24, 94, 0.75) 0px 18px 36px 30px inset;
-                height: 100%;
-                width: 100%;
-                display: grid;
-                grid-template-columns: repeat(2,50%);
+        }
+    }
 
-                &-details{
-                    height: 100%;
-                    grid-column: 1/2;
-                    text-align: center;
-                }
+    &_menu {
+        grid-column: 8/13;
+        height: 10vh;
+        grid-row: 1/4;
+        display: flex;
+        column-gap: 1rem;
 
-                &-img{
-                    height: 100%;
-                    grid-column: 2/3;
-                    border-left: 1px dotted black;
-                    background-position: center;
-                    background-size: contain;
-                    background-repeat: no-repeat;
-                    
-                    
-                    
-                }
+        &-btn {
+            background-color: transparent;
+            box-shadow: none;
+            display: inline-block;
+            width: 25%;
+            border: none;
+
+            & p {
+                font-size: 12px;
             }
         }
-        .Tshirts {
-            background-image: url("https://www.buytshirtdesigns.net/wp-content/uploads/2020/02/20-Gym-T-shirts-600x450.jpg");
-        }
+    }
+}
 
-        .shoes {
-            background-image: url("https://thumbs.dreamstime.com/b/various-types-shoes-vector-graphics-silhouettes-various-types-shoes-vector-graphics-silhouettes-shoes-men-200369007.jpg");
-        }
+&-imgsBox {
+    background-image: url(https://s18670.pcdn.co/wp-content/uploads/Top-20-Teacher-T-Shirts-on-Etsy.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: auto;
+    width: 100%;
+    height: 35%;
+    margin-top: 10px;
+}
 
-        .pants {
-            background-image: url("https://media.istockphoto.com/vectors/set-of-trousers-for-business-man-vector-id818252146?k=20&m=818252146&s=612x612&w=0&h=zA3CDwVXCfKAgIZ1FxkyfvGLRgKX_aentNe9AwmNDJw=");
+&_catagories {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    flex-direction: row;
+    height: 20%;
+    margin: auto;
+
+    &-box {
+        margin-top: 10px;
+        width: 35%;
+        // border: 1px solid black;
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+
+        &:hover {
+            transform: scale(1.2);
         }
     }
 
-    &_sortANDfilterBtns {
-        height: 7vh;
+    &-display {
         width: 100%;
+        height: 25%;
+        margin-top: 5px;
+        border: 1px solid rgb(197, 187, 187);
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-top: 15px;
-        
-        &-box {
-            height: 80%;
-            width: 30%;
-            margin: auto;
-        }
-    }
-    &-select{
-        border-radius: 15%;
-        font-size: 12px;
-        font-weight: bold;
-        box-shadow: rgba(40, 40, 41, 0.85) 0px 30px 60px -12px inset,rgba(25, 34, 153, 0.8) 0px 18px 36px 30px inset;
-        height: 4vh;
-        text-align: center;
-        appearance: none;
-        width: 45%;
-        background: rgb(50, 86, 185);
-        color: rgb(255, 255, 255);
-        font-weight: bold;
-        margin:auto;
+        flex-direction: column;
+        column-gap: 5px;
+        overflow-y: auto;
+        white-space: nowrap;
 
-        &-options{
-            font-size: 10px;
-            display: inline-block;
-            font-family: 'Times New Roman', Times, serif;
-            
+        &-card {
+            border-bottom: 5px solid rgb(0, 0, 0);
+            box-sizing: content-box;
+            box-shadow: rgba(110, 111, 112, 0.55) 0px 30px 60px 80px inset, rgba(12, 24, 94, 0.75) 0px 18px 36px 30px inset;
+            height: 100%;
+            width: 100%;
+            display: grid;
+            grid-template-columns: repeat(2, 50%);
+
+            &-details {
+                height: 100%;
+                grid-column: 1/2;
+                text-align: center;
+            }
+
+            &-img {
+                height: 100%;
+                grid-column: 2/3;
+                border-left: 1px dotted black;
+                background-position: center;
+                background-size: contain;
+                background-repeat: no-repeat;
+
+
+
+            }
         }
     }
+
+    .Tshirts {
+        background-image: url("https://www.buytshirtdesigns.net/wp-content/uploads/2020/02/20-Gym-T-shirts-600x450.jpg");
+    }
+
+    .shoes {
+        background-image: url("https://thumbs.dreamstime.com/b/various-types-shoes-vector-graphics-silhouettes-various-types-shoes-vector-graphics-silhouettes-shoes-men-200369007.jpg");
+    }
+
+    .pants {
+        background-image: url("https://media.istockphoto.com/vectors/set-of-trousers-for-business-man-vector-id818252146?k=20&m=818252146&s=612x612&w=0&h=zA3CDwVXCfKAgIZ1FxkyfvGLRgKX_aentNe9AwmNDJw=");
+    }
+}
+
+&_sortANDfilterBtns {
+    height: 7vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 15px;
+
+    &-box {
+        height: 80%;
+        width: 30%;
+        margin: auto;
+    }
+}
+
+&-select {
+    border-radius: 15%;
+    font-size: 12px;
+    font-weight: bold;
+    box-shadow: rgba(40, 40, 41, 0.85) 0px 30px 60px -12px inset, rgba(25, 34, 153, 0.8) 0px 18px 36px 30px inset;
+    height: 4vh;
+    text-align: center;
+    appearance: none;
+    width: 45%;
+    background: rgb(50, 86, 185);
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    margin: auto;
+
+    &-options {
+        font-size: 10px;
+        display: inline-block;
+        font-family: 'Times New Roman', Times, serif;
+
+    }
+}
 }
