--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
@@ -11,6 +11,10 @@ flex-direction: column;
   // grid-template-rows: 1fr;
   align-items: center;
   height: 9vh;
+  &__sotr{
+      margin-bottom: 70px;
+  
+  }
 .usp__bar{
   display: flex;
   flex-direction: row;
@@ -20,7 +24,7 @@ flex-direction: column;
   max-height: 40px;;
   justify-content: space-around;
   background-color: black;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   p{
    transition:  ease 1s;
 
@@ -76,6 +80,7 @@ flex-direction: column;
 //   float: left;
 //  height: 70px;
   img{
+    transform: scale(1.5);
  height: 25%;
  width: 25%;
   }
@@ -149,26 +154,79 @@ flex-direction: column;
 }
 
 .cards {
-  display: flex;
-  // display: grid;
-  // grid-template-rows: repeat(3, 1fr);
-  // grid-template-columns: repeat(4, 1fr);
-  border: 1px solid black;
+  padding-left: 150px;
+  padding-right: 150px;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  position: relative;
   &__item {
-    width: 330px;
-    height: 450px;
-    border: 1px solid black;
-    & .picture {
-      img {
-        position: relative;
-        width: 100%;
+    width: 300px;
+    height: 420px;
+    &:hover{
+     border: 1px solid black;
+
+    }
+    .fa-heart{
+      position: absolute;
+      right: 0;
+      top: 0;
+      z-index: 8;
+      margin: 10px;
+    }
+    .picture {
+      width: 303px;
+  height: 303px;
+  position: relative;
+  display: inline-block;
+  .img-top {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 99;
+  }
+    &:hover .img-top .fa-heart{
+      display: inline;
+    }  
+    &:hover .img-top {
+      display: inline;
+    }  
+      img{
+        display: block;
+        width: 99%;
         height: 100%;
-        :nth-child(1){
-          bottom:0;
-          position: absolute;
-        }
       }
-      
+    }
+  }
+}
+.footer{
+
+  &__top{
+    display: flex;
+    flex-direction: row;
+    background-color:#ede734 ;
+    color: #000;
+    width: 100%;
+    height: 100px;
+    align-items: center;
+    justify-content: space-around;
+    button{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 200px;
+      background-color: black;
+      color: white;
+      border: none;
+        &:hover{
+          color:rgb(83, 81, 81) ;
+        
+      }
+      h4{
+        font-size: 35px;
+      }
     }
   }
 }
