--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -53,14 +53,14 @@
 }
 
 
-* {
-    padding: 0;
-    margin: 0;
-    border: 0;
-    box-sizing: border-box;
-    transition: all 0.7s;
+// * {
+//     padding: 0;
+//     margin: 0;
+//     border: 0;
+//     box-sizing: border-box;
+//     transition: all 0.7s;
 
-}
+// }
 
 body {
     font-family: 'Barlow Condensed', sans-serif;
