--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
@@ -11,7 +11,7 @@ flex-direction: column;
   // grid-template-rows: 1fr;
   align-items: center;
   height: 9vh;
-  &__sotr{
+  &__sort{
       margin-bottom: 70px;
   
   }
