--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.scss
@@ -8,7 +8,7 @@
   --small-icon: 1em;
   --genergal-text-color: #e5dfd9;
   --footer-color: rgb(147, 147, 147);
-  --footer-background-color:#1b1b1b;
+  --footer-background-color: #1b1b1b;
 }
 // makes everything have 0 margin for style start:
 html,
@@ -44,7 +44,7 @@ body {
 
 .backToTop {
   width: 100vw;
-  font-size: .6em;
+  font-size: 0.6em;
   position: relative;
   text-align: center;
   background: black;
@@ -68,33 +68,105 @@ footer {
   width: 100vw;
   display: grid;
   grid-template-areas:
-  "1"
-  "3"
-  "2"
-  "4"
-  "5"
-  "6"
-  "7"
-  "8"
-  "9"
-;
-  // grid-template-columns: 1fr;
-  // grid-template-rows: 3fr 4fr 5rem 5rem;
+    "1"
+    "3"
+    "2"
+    "4"
+    "5"
+    "6"
+    "7";
+  @media only screen and (min-width: 768px) {
+    position: relative;
+    height: 100%;
+    grid-template-columns: 25% 25% 50%;
+    grid-template-rows: 30vh 15vh 15vh 10vh;
+    *, *>* {
+      padding: 0;
+      margin: 0;
+    }
+    [data-1] {
+      grid-column: 3/4;
+      grid-row: 3/5;
+      position: absolute;
+      top: 25%;
+      left: 25%;
+      transform: translate(-25%, -25%);
+      display: flex;
+      flex-direction: column;
+      div{
+        color: var(--genergal-text-color);
+        font-size:.8em;
+        background-color: black;
+        display: flex; 
+        flex-direction:row;
+        justify-content:baseline;
+        align-items:baseline;
+        margin-top: 1em;
+        padding:.3em;
+        img{
+      width: .9em;
+      transform: rotate(180deg);
+    }
+    svg{
 
+    }
+    input{
+      display: block;
+      background-color:black;
+      border:black solid;
+    }
+  }
+  }
+    [data-2] {
+      padding: 0 0 0 1em;
+      &:before{
+        padding: 1em;
+        content:"EXCLUSIVE SERVICES";
+      };
+      grid-column: 1/2;
+      grid-row: 1/4;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      gap: 1em;
+      & > div {
+        text-align: baseline;
+        padding: 0 0 0 1em;
+      }
+    }
+    [data-4] {
+      display: flex;
+      justify-content: space-around;
+      grid-column: 2/4;
+      grid-row: 1/3;
+    }
+    [data-5] {
+      grid-column: 1/3;
+      grid-row: 4/6;
+    }
+    [data-6] {
+      grid-column: 3/4;
+      grid-row: 5/6;
+    }
+    [data-7] {
+      grid-column: 1/4;
+      grid-row: 6/7;
+    }
+    [data-3] {
+      display: none;
+    }
+    [class^="fa"] {
+      opacity: 0;
+    }
+    i {
+      opacity: 0;
+    }
+    ::after {
+      opacity: 0;
+    }
+  }
   background-color: var(--footer-background-color);
-  // @media only screen and (min-width: 768px) {
-  //   grid-template-areas: 
-  //   "2 31 32 33"
-  //   "2 31 32 33"
-  //   "2 31 32 33"
-  //   "4 1 .  ."
-  //   "4 1 .  ."
-  //   "4 5 .  ."
-  //   "4 5 .  ."
-  //   "6 . .  ."
-  //   ;
-  // }
-  
+
   svg {
     padding-right: 0.2rem;
     width: var(--small-icon);
@@ -102,8 +174,11 @@ footer {
   }
 
   [class^="secondaryNav__"] {
-    padding: 1rem .5rem 1rem .5rem ;
+    padding: 1rem 0.5rem 1rem 0.5rem;
     border-bottom: 0.1em solid rgba(238, 238, 238, 0.119);
+    @media only screen and (min-width: 768px) {
+      border-bottom: 0;
+    }
     :last-child {
       border: none;
     }
@@ -111,32 +186,50 @@ footer {
       position: absolute;
       right: 0.4rem;
     }
+    
   }
   .secondaryNav {
-    :last-child {
-      border: none;
-    }
     &__withIcons {
-      width:index;
+      width: index;
       color: rgb(127, 125, 121);
       background-color: var(--footer-background-color);
     }
     &__locator {
       color: var(--footer-color);
-      span {
         @media only screen and (min-width: 768px) {
+        
+        > svg {
           display: none;
-        }
-        svg {
           height: var(--small-icon);
-margin-right: .2rem;
+          margin-right: 0.2rem;
         }
       }
+    }
+    ul {
+      & > li{
+        font-size: .8em;
+        color: var(--genergal-text-color);
+        list-style: none;
+        display:none;
+        @media only screen and (min-width: 768px) {
+          padding: .5em 0 0 0em;
+          display: flex;
+          flex-direction: column;
+          display: block
+        }
+      }
+      :first-child {
+        padding: 0 0 1em 0;
+      }
+      @media only screen and (min-width: 768px) {
+      justify-content:space-evenly;
+
+    }
     }
     &__services {
       fill: var(--footer-color);
       &::after {
-        margin-right: .4rem;
+        margin-right: 0.4rem;
         position: absolute;
         right: 0;
         width: var(--small-icon);
@@ -148,7 +241,7 @@ margin-right: .2rem;
     &__ostria {
       fill: var(--footer-color);
       &::after {
-        margin-right: .4rem;
+        margin-right: 0.4rem;
         position: absolute;
         right: 0;
         width: var(--small-icon);
@@ -159,8 +252,9 @@ margin-right: .2rem;
     }
     &__appointment {
       fill: var(--footer-color);
+      border: none;
       &::after {
-        margin-right: .4rem;
+        margin-right: 0.4rem;
         position: absolute;
         right: 0;
         width: var(--small-icon);
@@ -174,73 +268,71 @@ margin-right: .2rem;
       background-color: rgb(27, 27, 27);
     }
   }
-  .footer__{
-  &svgs {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
+  .footer__ {
+    &svgs {
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
 
-    span > svg {
-      padding:0 .5rem 0 .5rem;
-      fill: var(--bottom-logo-color);
-      color: var(--bottom-logo-color);
-      width: var(--bottom-logo-size);
-      height: var(--bottom-logo-size);
-      &:hover{
-        fill: var(--bottom-logo-color-hover);
-        color: var(--bottom-logo-color-hover);
+      span > svg {
+        padding: 0 0.5rem 0 0.5rem;
+        fill: var(--bottom-logo-color);
+        color: var(--bottom-logo-color);
+        width: var(--bottom-logo-size);
+        height: var(--bottom-logo-size);
+        &:hover {
+          fill: var(--bottom-logo-color-hover);
+          color: var(--bottom-logo-color-hover);
+        }
       }
     }
+    &credit {
+      opacity: 0.7;
+      text-align: center;
+      padding: 0.5rem 0 0.5rem 0;
+      margin: 0;
+      font-size: 0.8em;
+    }
   }
-  &credit {
-    opacity: .7;
-    text-align: center;
-    padding: .5rem 0  .5rem 0;
-    margin: 0;
-    font-size: .8em;
-  }
-}
-}
-
-#osteria, #garden{
- svg{
-  height: var(--bottom-logo-size-noContainer);
-  width: var(--bottom-logo-size-noContainer);
-  }
+  
 }
 
+#osteria,
+#garden {
+  svg {
+    height: var(--bottom-logo-size-noContainer);
+    width: var(--bottom-logo-size-noContainer);
+  }
+}
 
 // arias:
 
-[data-1]{
-  grid-area:1 ;
+[data-1] {
+  grid-area: 1;
+  div{
+    display:none;
+  }
 }
-[data-3]{
-  grid-area: 3;
+[data-2] {
+  grid-area: 2;
 }
-[data-4]{
+[data-4] {
   grid-area: 4;
 }
-[data-5]{
+[data-5] {
   grid-area: 5;
+  padding-top: 0 !important;
 }
-[data-6]{
+[data-6] {
   grid-area: 6;
 }
-[data-7]{
+[data-7] {
   grid-area: 7;
 }
-[data-8]{
-  grid-area: 8;
-
-}
-[data-9]{
-  grid-area: 9;
-}
-[data-div]{
+[data-3] {
   background-color: black;
   height: 1rem;
   width: 100vw;
-  grid-area: 2;
+  grid-area: 3;
 }
